--- a/views/media.pug
+++ b/views/media.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-    if 1 == 1
+    if upload.bitrateInKbps > 1500
         style.
             /** everything 650 and below */
             /* on mobile we dont do a max height in other words */
@@ -122,7 +122,7 @@ block content
         }
 
         /* anything above this width */
-        @media (min-width: 768px) {
+        @media (min-width: 900px) {
             .uploader-details-section {
                 margin-top: -140px;
             }
@@ -385,7 +385,7 @@ block content
 
             // UPLOADER DETAILS SECTION END
 
-            div.col-sm-6(style="margin-top:30px")
+            div.col-sm-6.col-sm-offset-3(style="margin-top:30px")
                 //REACTS WITH LIKES, DISLIKE, DISGUST, ETC
                 div.react(style="max-width:375px;background-color:white;margin:0 auto;border-radius:10px;margin-bottom:21px;padding-bottom:12px;min-width:247px;")
                     // margin-top:133px
