coming along well

--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -262,7 +262,7 @@ style.
 
     a(href='/random' style="")
         i.ib.i.fas.fa-dice
-        p.ib &nbsp Random
+        p.ib &nbsp Random Upload
 
 
     hr
