--- a/views/media.pug
+++ b/views/media.pug
@@ -7,7 +7,7 @@ block content
             @media (min-width: 900px) {
 
                 .reactColumn {
-                    margin-top: -174px !important;
+                    margin-top: -141px !important;
                 }
             }
 
@@ -66,6 +66,9 @@ block content
         @media (min-width:900px){
             .uploadDescriptionDiv {
                 margin-top: 50px;
+                /* hack solution to get this trash to work */
+                max-height:199px;
+
             }
         }
 
@@ -322,19 +325,6 @@ block content
 
                         p#uploadDescriptionText.fw.uploadDescriptionText(style="color:grey") #{upload.description}
 
-            // REMOVE QUALITY THING, EVERYONE CAN STAY LOW QUALITY
-            // also have to add .fw to this thing when take it live
-            //if upload.quality && upload.quality.high
-            //    div.dropdown
-            //        button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:4px;" quality="low")
-            //            | Quality: Low
-            //            span.caret
-            //
-            //        ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1' style="cursor:pointer;")
-            //            li(role='presentation')
-            //                a.low-quality Low
-            //            li(role='presentation')
-            //                a.high-quality High
 
             //if upload.uploader.plan == 'plus'
             //    br
@@ -368,12 +358,12 @@ block content
                             if category.name == upload.category
                                 p.fw(style="margin-top:15px;font-size:12px;") Category: #{category.displayName}
 
-                                if upload.subcategory
-
-                                    each subcategory in category.subcategories
-
-                                        if upload.subcategory == subcategory.name
-                                            p.fw(style="margin-top:15px;font-size:12px;") Subcategory: #{subcategory.displayName}
+                                //if upload.subcategory
+                                //
+                                //    each subcategory in category.subcategories
+                                //
+                                //        if upload.subcategory == subcategory.name
+                                //            p.fw(style="margin-top:15px;font-size:12px;") Subcategory: #{subcategory.displayName}
 
                     if maxRatingAllowed !== 'SFW'
                         if upload.rating
