--- a/views/media.pug
+++ b/views/media.pug
@@ -67,8 +67,10 @@ block content
             .uploadDescriptionDiv {
                 margin-top: 50px;
                 /* hack solution to get this trash to work */
-                max-height:199px;
+            }
 
+            .uploadDescriptionColumn {
+                max-height:199px;
             }
         }
 
