--- a/views/media.pug
+++ b/views/media.pug
@@ -71,6 +71,7 @@ block content
 
             .uploadDescriptionColumn {
                 max-height:199px;
+                overflow: hidden;
             }
         }
 
