--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -49,6 +49,11 @@ block content
             text-align:center;
             margin-top:30px;
         }
+
+        footer {
+            padding-top: 30px;
+        }
+
     div.channel-information.container
         div.col-sm-12
             div.col-sm-4(style="margin:0 auto;text-align:center;")
