--- a/views/media.pug
+++ b/views/media.pug
@@ -348,8 +348,8 @@ block content
 
                     p
 
-                    if upload.bitrateInKbps
-                        p.fw.fileSizeText(style="margin-top:15px") Bitrate in kbps: #{upload.bitrateInKbps}
+                    //if upload.bitrateInKbps
+                    //    p.fw.fileSizeText(style="margin-top:15px") Bitrate in kbps: #{upload.bitrateInKbps}
 
                     if upload.fileType == 'video' || upload.fileType == 'audio'
 
