--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -30,7 +30,7 @@ div.underThing
 // UPLOAD TITLE
 a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" target="_parent")
     div
-        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;margin-top:0px;") #{upload.title} &nbsp
+        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;margin-top:0px;") #{upload.title}
 
 // shows view amount, username and if recent also time ago
 // TODO: need to rename this div
