--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -15,7 +15,7 @@ style.
 div.underThing
     // all the details including title
     if ( upload.fileType == 'audio' || upload.fileType == 'video') && upload.formattedDuration
-        div.duration(style="display:inline;height:26px;max-width:70px;text-align:center;position:relative;bottom:0;right:0;background-color:black;opacity:0.5;margin: 0 auto;border-radius: 5px")
+        div.duration(style="display:inline;height:26px;max-width:70px;text-align:center;position:relative;bottom:0;right:0;opacity:0.5;margin: 0 auto;border-radius: 5px")
             span(style="color: white;margin-right:7px;font-size:16px;") #{upload.formattedDuration}
 
 
@@ -28,7 +28,7 @@ div.underThing
 
 
 // UPLOAD TITLE
-a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" target="_parent")
+a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:#7d7373;" target="_parent")
     div
         p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;margin-top:0px;") #{upload.title}
 
