--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -206,7 +206,7 @@ style.
 
 
 // LEFT SIDEBAR
-#mySidebar.sidebar(style="text-align:left;margin-left:-2px;overflow-y: hidden;border-radius:6px;")
+#mySidebar.sidebar(style="text-align:left;margin-left:-2px;overflow-y: hidden;border-radius:6px;z-index:10")
     div(style="margin-top:27px")
 
     // user signed in but not paid, prompt to pay
