--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -170,14 +170,11 @@ block content
 
         include ../viewPartials/channelOverviewPagination
 
-    br
-    br
-
     //UPLOAD DISPLAY SECTION
 
     div.container
         each upload in channel.uploads
-            div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:330px;margin-top:50px;")
+            div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:330px;margin-bottom:50px;")
                 if isUser || isAdmin || ( user && user.role == 'moderator' )
                     div.editFileButtons(style="")
                         form.editLink(action="/api/upload/delete" method="POST" style="display:inline-block")
