finishing dark mode

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -99,7 +99,7 @@ block content
 
                 div.col-sm-12(style="margin-top:30px;")
                     if channel.channelDescription
-                        p.fw(style="font-size:18px" id="descriptionText") Description: #{channel.channelDescription}
+                        p.fw(style="font-size:18px" id="descriptionText") #{channel.channelDescription}
 
                     //if user && user.role == 'admin'
                     //    each ip in ips
