more frontend updates

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -213,8 +213,13 @@ style.
   }
 
   .search-uploads-button {
-    border: 1px solid #c5c5c5;
+    border: 1px solid #5b5a5a;
     z-index: 99999999
+  }
+
+  .search-query-input {
+    border: 1px solid #5b5a5a !important;
+    color:white !important;
   }
 
   .search-uploads-button:hover {
