--- a/views/media.pug
+++ b/views/media.pug
@@ -103,6 +103,7 @@ block content
         }
 
         .reactImage {
+            opacity: 0.85;
             width: 40px;
             transition: all 0.2s ease-in-out;
         }
