dont auto focus search

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -505,7 +505,7 @@ script.
 
     console.log(orderBy, mediaType, searchQuery, searchType)
 
-    $('.search-query-input').focus();
+    // $('.search-query-input').focus();
 
 
     // TODO: how to capture enter from input
