--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -96,7 +96,8 @@ block content
 
         console.log(orderBy, mediaType, searchQuery, searchType)
 
-        $('.search-query-input').focus();
+        // no need to autofocus
+        //        $('.search-query-input').focus();
 
 
         // capture submit
