--- a/views/media.pug
+++ b/views/media.pug
@@ -124,6 +124,13 @@ block content
             white-space:pre-wrap
         }
 
+        .search-query-input {
+            background-color: black !important;
+        }
+
+
+
+
 
 
         /* anything above this width */
