--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -75,7 +75,7 @@ script.
   // Create the plyr instances - this defines players[0] as our primary player.
   var players = Plyr.setup("#media_player", plyr_options);
 
-  var player = player[0];
+  var player = players[0];
 
   players[0].on('ready', function (event) {
 
