autohider functionality working

--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -275,7 +275,7 @@ style.
 
     a(href="/about")
         i.ib.fa.fa-question-circle(aria-hidden='true')
-        p.ib About Us &nbsp
+        p.ib About #{brandName} &nbsp
 
     a(href='https://newtube.app/paypal' style="color:#007bff;")
         i.ib.fas.fa-dollar-sign
